ajax homework modified 1

--- a/Ajax Homework/style.css
+++ b/Ajax Homework/style.css
@@ -69,3 +69,12 @@ h1 {
 .visible {
     visibility: visible;
 }
+article > p {
+  margin:1px auto;
+  
+}
+.buttons {
+    margin: 0 auto;
+  width:100px;
+  
+}
