--- a/Blog Project Final/css/style.css
+++ b/Blog Project Final/css/style.css
@@ -75,3 +75,28 @@ html,body {
 .contact-form{
     margin-bottom : 0;
 }
+
+footer{
+    background-color: #dedfe0;
+    padding: 1rem;
+}
+
+#social-media p img {
+    height: 9%;
+    width: 9%;
+    margin-right: 1rem;
+}
+#social-media h3{
+    padding:1.2rem;
+}
+#plus{
+    font-size: 1.5rem;
+}
+
+#clock {
+    padding: 1.2rem;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1rem;
+    color:#c92c4b;
+    font-weight: 800;
+}
